force-app/main/default/objects/Case/fields/Agent_Sourced__c.field-meta.xml
<CustomField>
    <fullName>Agent_Sourced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when Campus IT triage created this Case, rather than a walk-up or an email-to-case.</description>
    <label>Triage Sourced</label>
    <type>Checkbox</type>
</CustomField>