force-app/main/default/objects/Case/fields/IT_Category__c.field-meta.xml
<CustomField>
    <fullName>IT_Category__c</fullName>
    <description>Canonical Campus IT category written by the triage agent (Network, Hardware, Software, Account, General). Used to reuse open tickets without relying on Subject text.</description>
    <label>IT Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>