force-app/main/default/objects/Case/fields/Reused_Existing_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Reused_Existing_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when triage reused this Case instead of opening a duplicate.</description>
    <label>Reused Existing Ticket</label>
    <type>Checkbox</type>
</CustomField>