force-app/main/default/objects/Case/fields/Self_Service_Article__c.field-meta.xml
<CustomField>
    <fullName>Self_Service_Article__c</fullName>
    <description>Title of the known-issue guide the agent walked through before this escalation.</description>
    <label>Self Service Article</label>
    <length>80</length>
    <type>Text</type>
</CustomField>