force-app/main/default/objects/Case/fields/Self_Service_Attempted__c.field-meta.xml
<CustomField>
    <fullName>Self_Service_Attempted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the agent tried a known-issue guide before escalating.</description>
    <label>Self Service Attempted</label>
    <type>Checkbox</type>
</CustomField>