force-app/main/default/objects/Case/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <description>Campus student identifier captured by Campus IT triage when escalating an IT issue.</description>
    <label>Student ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>