force-app/main/default/objects/Case/listViews/Campus_IT_Open_Cases.listView-meta.xml
<ListView>
    <fullName>Campus_IT_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>Student_ID__c</columns>
    <columns>IT_Category__c</columns>
    <columns>First_Response_Due__c</columns>
    <columns>Agent_Sourced__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Campus IT Open Cases</label>
</ListView>